# image_dataset_creator

./: .coverage  README.md  pyproject.toml
.github/workflows/: test.yml
idc/: __init__.py  builder.py  cli.py  config.py  manifest.py  models.py  utils.py
idc/exporters/: __init__.py  base.py  coco.py  csv_exporter.py  huggingface.py  raw.py  yolo.py
idc/filters/: __init__.py  clip_filter.py  dedup.py  quality.py
idc/sources/: __init__.py  base.py  openimages.py  pexels.py  pixabay.py  unsplash.py  wikimedia.py
tests/: conftest.py  test_builder.py  test_cli.py  test_config.py  test_exporters.py  test_filters.py  test_manifest.py  test_models.py  test_openimages.py  test_sources.py  test_utils.py
